# example_for_cmake_with_python

./: CMakeLists.txt  README.md  ToDoLists.md
build-scripts/: copy_gcc_runtime_dependency_dll.py  install-python-lib.py  sync-scripts.py
python-scripts/: CMakeLists.txt  my_module.py
src/: CMakeLists.txt  Python_Wraps.cpp  Python_Wraps.h  main.cpp  py_console.cpp  py_console.h  py_interpreter.cpp  py_interpreter.h
